[package]
name = "roguelike"
version = "0.1.0"
authors = ["Ignacio Martinez"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
chargrid_graphical = "0.7"
chargrid = "0.4"
coord_2d = "0.3"
grid_2d = "0.15"
rgb24 = "0.3"
direction = "0.18"
entity_table = "0.2"
spatial_table = "0.3"
rand = "0.8"        # basic functionality for random number generators
rand_isaac = "0.3"  # a specific random number generator implementation